# ndlocr-lite

./: .gitignore  CHANGELOG.md  LICENCE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  web_ocr_quality.md
.github/workflows/: models-release.yml  pages-deploy.yml  python-ci.yml  web-ci.yml  web-deploy.yml
docs/: runbook-model-update.md  user-guide-web.md
docs/pyodide-port/: README.md  architecture.md  benchmark.md  phase-0-feasibility.md  phase-1-python-refactor.md  phase-2-models-and-ort-web.md  phase-3-pyodide-integration.md  phase-4-frontend-ui.md  phase-5-performance.md  phase-6-release.md
ndlocr-lite-gui/: README.md  main.py
ndlocr-lite-web/: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ndlocr-lite-web/public/: manifest.json  verify.html
ndlocr-lite-web/public/wheels/: ndlocr_web-0.1.0-py3-none-any.whl
ndlocr-lite-web/src/: App.tsx  main.tsx  sw.ts
ndlocr-lite-web/src/components/: DownloadButtons.tsx  DropZone.tsx  ErrorBoundary.tsx  Footer.tsx  Header.tsx  ImageViewer.tsx  LicenseModal.tsx  LoadProgress.tsx  (+1 more)
scripts/: build-wheel.sh  compute_model_hashes.py
src/: deim.py  ocr.py  pyproject.toml
src/ndlocr_web/: __init__.py  bridge.py  cascade.py  detector.py  imgops.py  ndl_parser.py  pipeline.py  recognizer.py  xml_builder.py
src/ndlocr_web/config/: __init__.py
src/ndlocr_web/reading_order/order/: reorder.py  warichu_block.py
src/ndlocr_web/reading_order/xy_cut/: eval.py
tests/: pyodide_smoke.py  test_imgops.py
train/: README.md
(+11 files in other folders)
